--- a/index.html
+++ b/index.html
@@ -180,17 +180,17 @@
       </div>
       <div class="ml-2 relative" id="selected-products"></div>
 
-      <div id="total-sub" class="hidden">
+      <div id="total-sub" class="">
         <p
           class="flex justify-between text-gray-500 font-light capitalize mt-2"
         >
           order total
           <span class="text-black font-bold text-lg" id="total"></span>
         </p>
-        <div class="bg-red-50 px-3 py-2 rounded-lg mt-2 md:px-2 md:py-1">
+        <div class="bg-red-50 px-2 py-2 rounded-lg mt-2 md:px-2 md:py-1">
           <img src="images/icon-carbon-neutral.svg" alt="" class="" />
           <p
-            class="text-[12.5px] ml-6 -mt-4 text-gray-400 md:text-sm text-center"
+            class="text-[12.5px] -ml-10 -mt-4 text-gray-400 md:text-sm text-center"
           >
             this is a
             <span class="font-bold text-black">carbon-neutral </span>delivery
