--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
       </div>
       <div class="ml-2 relative" id="selected-products"></div>
 
-      <div id="total-sub" class="">
+      <div id="total-sub" class="hidden">
         <p
           class="flex justify-between text-gray-500 font-light capitalize mt-2"
         >
