--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <div class="bg-red-50 px-2 py-2 rounded-lg mt-2 md:px-2 md:py-1">
           <img src="images/icon-carbon-neutral.svg" alt="" class="" />
           <p
-            class="text-[12.5px] -ml-10 -mt-4 text-gray-400 md:text-sm text-center"
+            class="text-[12.5px] ml-5 -mt-4 text-gray-400 md:text-sm text-center"
           >
             this is a
             <span class="font-bold text-black">carbon-neutral </span>delivery
